# Game-Of-Life

./: .gitignore  CMakeLists.txt  CMakeSettings.json  GameOfLife.sln
GameOfLife/: CMakeLists.txt  Field.cpp  GameOfLife.vcxproj  main.cpp
GameOfLife-cmake/: CMakeLists.txt  Field.h  main.cpp
SFML/: CMakeLists.txt
SFML/src/SFML/: CMakeLists.txt
SFML/src/SFML/System/: CMakeLists.txt
SFML/src/SFML/Window/: CMakeLists.txt
lib/: sfml-graphics-d.exp  sfml-graphics.exp  sfml-main-d.lib  sfml-main.lib  sfml-system-d.exp  sfml-system.exp  sfml-window-d.exp  sfml-window.exp
